--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ __pycache__/helpers.cpython-312.pyc
 __pycache__/main.cpython-312.pyc
 __pycache__/helpers.cpython-311.pyc
 __pycache__/main.cpython-311.pyc
+.DS_Store
